[tool.poetry]
name = "pokepaste-parser"
version = "0.1.0"
description = ""
authors = ["malaow3 <malaow3@yahoo.com>"]
readme = "readme.md"
packages = [{include = "pokepaste_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
mlogger = {git = "https://github.com/malaow3/mlogger.git"}
pylogrus = "^0.4.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
bs4 = "^0.0.1"
mypy = "^1.4.1"
darker = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
